# visualpython

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Hyunseop Yoon  LICENSE  README.md  SUMMARY.md  Untitled.ipynb  build.sh  hi.js  popupComponent.html  tesTest.js  visualpython.js  visualpython.yaml  vp.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  content-contribution.md  design-fix.md  simple-devops-issues.md
colab/: background.js  build.colab.sh  content.js  inject.js  manifest.json  popup.html  visualpython
css/: boardFrame.css  fileNavigation.css  main.css  mainFrame.css  menuFrame.css  popupComponent.css  root.css
css/api_block/: index.css
css/common/: bind.css  frameEditor.css  groupby.css  instanceEditor.css  merge.css  pdf.css  popupPage.css  profiling.css  reshape.css  snippets.css  subsetEditor.css
css/component/: alertModal.css  common.css  dataSelector.css  fileNavigation.css  infoModal.css  innerFuncViewer.css  instanceEditor.css  modal.css  multiSelector.css  popupComponent.css  successMessage.css
css/container/: vpContainer.css
css/file_io/: fileio.css  instance.css  instance_old2.css  pip.css  udf.css  variables.css  vpBoard.css
css/m_apps/: bind.css  chart.css  file.css  frame.css  groupby.css  import.css  instance.css  markdown.css  pdf.css  profiling.css  reshape.css  snippets.css  subset.css  variable.css
css/m_library/: libraryComponent.css  numpyComponent.css
css/m_ml/: dataSplit.css  fitPredict.css  modelInfo.css
css/m_stat/: descriptiveStat.css
css/m_visualize/: chart.css  plotly.css  seaborn.css  wordCloud.css
css/matplotlib/: figure.css  plot.css
css/numpy/: index.css
css/pandas/: basicCal.css  commonPandas.css  frameEditor.css  instance_old.css  plot.css
css/python/: index.css
css/python_common/: index.css
data/: help_data.json  libraries.json  libraries.xml  libraries.xml.bak  libraries_test.json
data/m_apps/: chartLibrary.js
data/m_library/: numpyLibrary.js  pandasLibrary.js  pythonLibrary.js
data/m_ml/: mlLibrary.js
data/m_stat/: descriptiveStatLibrary.js
data/m_visualize/: chartLibrary.js  plotlyLibrary.js  seabornLibrary.js
data/sample_csv/: accidentData.csv  cancer.csv  houseData_500.csv  lolRankedData_500.csv  mnist_train_1000.csv  weatherData_500.csv  welfareCenter.csv
docs/: README.md  SUMMARY.md
docs/data-analysis/: 1.-import.md  2.-file.md  3.-data-info.md  5.-subset.md  6.-groupby.md  7.-bind.md  8.-reshape.md
docs/getting-started/: how-to-install.md  installing-faq.md  welcome-to-visual-python.md
docs/machine-learning/: 1.-data-sets.md  10.-fit-predict.md  11.-model-info.md  12.-evaluation.md  13.-pipeline.md  14.-save-load.md  2.-data-split.md  3.-data-prep.md  4.-automl.md  5.-regressor.md  6.-classifier.md  7.-clustering.md  8.-dimension.md  9.-gridsearch.md
docs/statistics/: 1.-prob.-distribution.md  10.-factor-analysis.md  11.-regression.md  12.-logistic-regression.md  2.-descriptive-statistics.md  3.-normality-test.md  4.-equal-var.-test.md  5.-correlation-analysis.md  6.-reliability-analysis.md  7.-chi-square-test.md  8.-students-t-test.md  9.-anova.md
docs/visualization/: 1.-chart-style.md  2.-pandas-plot.md  3.-matplotlib.md  4.-seaborn.md  5.-plotly.md  6.-wordcloud.md
getting-started/: how-to-install.md  installing-faq.md
html/: boardFrame.html  fileNavigation.html  menuFrame.html  popupComponent.html  styleGuide.html
html/component/: alertModal.html  dataSelector.html  fileNavigation.html  infoModal.html  innerFuncViewer.html  popupComponent.html  successMessage.html
html/m_apps/: bind.html  chart.html  file.html  frame.html  groupby.html  instance.html  pdf.html  profiling.html  reshape.html  snippets.html  subset.html  variable.html
html/m_library/: libraryComponent.html  numpyComponent.html
html/m_ml/: OrderInfo.html  dataSets.html  dataSplit.html  evaluation.html  fitPredict.html  fitting.html  model.html  modelInfo.html  modelSelection.html  prediction.html
html/m_stat/: descriptiveStat.html
html/m_visualize/: chart.html  chartSetting.html  plotly.html  seaborn.html  wordCloud.html
js/: MainFrame.js  loadVisualpython.js
js/board/: Block.js  BlockMenu.js  BoardFrame.js  HelpView.js
js/com/: com_Config.js  com_Const.js  com_Event.js  com_Kernel.js  com_Log.js  com_Popup.js  com_String.js  com_XML.js  com_generator.js  com_generatorV2.js  com_interface.js  com_makeDom.js  com_util.js
js/m_apps/: Bind.js  Chart.js  (+15 more)
jupyterlab/: .gitignore  .jupyterlite.doit.db  MANIFEST.in  README.md  Untitled.ipynb  build.jupyterlab.sh  dev-build.jupyterlab.sh  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
jupyterlab/binder/: environment.yml  postBuild
jupyterlab/lib/: VpPanel.js  index.js  visualpython
jupyterlab/schema/: plugin.json
jupyterlab/style/: base.css  index.js
jupyterlab/visualpython/: __init__.py
jupyternotebook/: README.md  build.jupyternotebook.sh  requirements.txt  setup.py  visualpython.js
python/: fileNaviCommand.py  pandasCommand.py  printCommand.py  userCommand.py  variableCommand.py  visualizationCommand.py
resources/: brand-story.md  community.md  license.md
src/: main.js  vp.js
tutorials/: data-exploration.md  data-preparation.md
visualpython/: visualpython.js  visualpython.yaml
(+762 files in other folders)
